Updated main.css to fix alignment of #available

--- a/main.css
+++ b/main.css
@@ -48,8 +48,8 @@ h2 {
   text-align: left;
   padding: 32px 48px;
   margin: 0;
-  font-size: 1.2rem;
-  font-weight: normal;
+  font-size: .9rem;
+  font-weight: 600;
 }
 
 #available {
